--- a/DL/runs/detect/train/args.yaml
+++ b/DL/runs/detect/train/args.yaml
@@ -1,10 +1,8 @@
 task: detect
 mode: train
 model: yolov8n.yaml
-data: '<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 640, 640, 3), dtype=tf.float32,
-  name=None), {''boxes'': TensorSpec(shape=(None, None, 4), dtype=tf.float32, name=None),
-  ''classes'': TensorSpec(shape=(None, None, 1), dtype=tf.float32, name=None)})>'
-epochs: 100
+data: config.yaml
+epochs: 1
 time: null
 patience: 100
 batch: 16
