Some Augmentation Techniques Applied

--- a/DL/ultralytics/config.yaml
+++ b/DL/ultralytics/config.yaml
@@ -1,7 +1,8 @@
-path: D:/Projects/DL/MonumentDetection/DL/dataset
-train: images/
-val: images/
+path: "D:/Projects/DL/MonumentDetection/DL/ultralytics/dataset"
+train: train/images
+val: val/images
 
 #Classes
 names:
   0: nyathapola
+  1: goldengate
